minimal refactors